# algo-fusion

./: .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  vercel.json
api/: index.py  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  vercel_app.py
backend/alembic/: env.py
backend/alembic/versions/: 20260420_0001_init.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  patients.py  rag.py  records.py  sessions.py  websocket.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: enums.py  patient.py  record.py  session.py  user.py
backend/app/schemas/: auth.py  patient.py  record.py  session.py
backend/app/services/: asr.py  auth.py  clinical_pipeline.py  extraction.py  medication.py  rag.py  reporting.py  runtime.py  seed.py
backend/clinical_voice_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/sample_data/: patients.json
backend/scripts/: seed_sample_data.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: DoctorAssistPanel.tsx  NewPatientForm.tsx  PatientHistoryPanel.tsx  PatientSelector.tsx  RagChatPanel.tsx  RecordingControls.tsx  StructuredDataPanel.tsx  TranscriptPanel.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  (+2 more)
(+4 files in other folders)
